--- a/app/src/main/res/layout/layout_category.xml
+++ b/app/src/main/res/layout/layout_category.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/linearLayout"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_marginRight="4dp"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:background="@color/white"
+    android:background="@drawable/layout_bg"
     android:gravity="center"
     android:orientation="horizontal"
     android:padding="8dp">
@@ -18,7 +18,7 @@
 
     <TextView
         android:id="@+id/tvName"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ITEM 1"
         android:textColor="@color/black"
